#20090 warning for invalid preference, and two more scenarios for the period feedback

--- a/Teleopti.Ccc.UserTexts/Resources.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.resx
@@ -10913,4 +10913,8 @@ These options are activated:
     <value>Walk Aways</value>
     <comment>Label for retail skill</comment>
   </data>
+  <data name="YourPreferenceIsOutOfRange" xml:space="preserve">
+    <value>Your preference is out of range.</value>
+    <comment>Used for tooltip of warning icon in mytimeweb when your preference is out of range.</comment>
+  </data>
 </root>
